--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@ textarea.fi2{resize:none;height:52px}
           <p><strong style="color:var(--tx)">Option 1 — Share Sheet directly (easiest, up to ~10 users):</strong><br>
           Open your Google Sheet → Share → add each agent's Gmail address as an Editor. They sign into this CRM with their own Google account. Each agent sees their own name in the auth prompt.</p>
           <p><strong style="color:var(--tx)">Option 2 — One shared studio account:</strong><br>
-          Create a single Gmail like <code style="background:var(--sf2);padding:1px 5px;border-radius:3px">lilliputland.studio@gmail.com</code>. All agents use those credentials. Simple but no per-agent audit trail.</p>
+          Create a single Gmail like <code style="background:var(--sf2);padding:1px 5px;border-radius:3px"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="513d383d3d382124253d303f357f22252435383e11363c30383d7f323e3c">[email&#160;protected]</a></code>. All agents use those credentials. Simple but no per-agent audit trail.</p>
           <p><strong style="color:var(--tx)">Option 3 — Google Apps Script Web App (recommended for 5+ agents):</strong><br>
           This removes the need for agents to have Sheet access entirely. The app runs as the owner. Agents open a URL — no OAuth needed. Contact your developer to set this up, or ask for the companion <code>.gs</code> script.</p>
           <p style="color:var(--td);font-size:11px">⚡ For LilliputLand: Option 1 is recommended right now. Go to your sheet → Share → add each agent's Gmail → set to Editor.</p>
@@ -3342,11 +3342,4 @@ function runTests(){
 // ═══════════════════════════════════════════════════════════════════
 window.addEventListener('load',()=>{
   const c=localStorage.getItem('sc'),s=localStorage.getItem('ss2'),n=localStorage.getItem('sn2');
-  if(c)document.getElementById('cfgCid').value=c;
-  if(s)document.getElementById('cfgSid').value=s;
-  if(n)document.getElementById('cfgSname').value=n;
-  // v8: reportDate removed, now using reportFrom/reportTo
-});
-</script>
-</body>
-</html>
+ 
